# mindset

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Justfile  README.md
.github/: SECURITY.md
.github/workflows/: security.yml
docs/: builder-guide.md  checkpointing.md  effects-guide.md  enforcement.md
examples/: README.md  account_management.rs  basic_state_machine.rs  checkpoint_resume.rs  document_workflow.rs  effectful_state_machine.rs  mapreduce_workflow.rs  order_processing.rs  resource_management.rs  testing_patterns.rs  traffic_light.rs  validation_enforcement.rs
specs/: 001-core-state-machine-foundation.md  001-documentation-improvements.md  001-enforcement-integration.md  001-readme-and-examples-improvement.md  002-documentation-and-cloneable-enforcement.md  002-effect-based-transitions.md  003-enforcement-observability.md  003-validation-based-enforcement.md  004-checkpoint-resume.md  005-builder-api-ergonomics.md
src/: lib.rs
src/builder/: error.rs  machine.rs  macros.rs  mod.rs  transition.rs
src/checkpoint/: error.rs  mod.rs
src/core/: guard.rs  history.rs  mod.rs  state.rs
src/effects/: machine.rs  mod.rs  transition.rs
src/enforcement/: builder.rs  context.rs  mod.rs  rules.rs  violations.rs
tests/: property_tests.rs
