[package]
name = "mindset"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "A pure functional state machine library built on Stillwater's Effect system"
license = "MIT"
repository = "https://github.com/iepathos/mindset"
keywords = ["state-machine", "functional", "effect", "workflow"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
stillwater = { version = "0.13", features = ["async"] }
thiserror = "1.0"
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.0", features = ["full"] }
